WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44697
[Qt] tst_QWebFrame::connectAndDisconnect() fails on WebKit trunk because __qt_sender__ is never set
https://bugs.webkit.org/show_bug.cgi?id=44697
Summary
[Qt] tst_QWebFrame::connectAndDisconnect() fails on WebKit trunk because __qt...
Benjamin Poulain
Reported
2010-08-26 11:16:16 PDT
The test tst_QWebFrame::connectAndDisconnect() fails on recent WebKit. This test does not fail on QtWebKit 2.0, but it does fail on WebKit trunk and WebKit 2.1. The outcome of the test is the following: FAIL! : tst_QWebFrame::connectAndDisconnect() Compared values are not the same Actual (evalJS("signalSender")): undefined Expected (evalJS("myObject")): Loc: [/home/ikipou/dev/webkit/qtwebkit/WebKit/qt/tests/qwebframe/tst_qwebframe.cpp(1488)] It seems __qt_sender__ is never set in the context of the function call.
Attachments
Patch
(3.23 KB, patch)
2010-09-07 02:07 PDT
,
Kent Hansen
kling
: review+
kent.hansen
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2010-08-31 16:21:25 PDT
***
Bug 41066
has been marked as a duplicate of this bug. ***
Kent Hansen
Comment 2
2010-09-07 02:07:12 PDT
Created
attachment 66695
[details]
Patch
Andreas Kling
Comment 3
2010-09-07 04:01:20 PDT
Comment on
attachment 66695
[details]
Patch r=me
Kent Hansen
Comment 4
2010-09-07 04:16:22 PDT
Committed
r66875
: <
http://trac.webkit.org/changeset/66875
>
Ademar Reis
Comment 5
2010-09-09 13:52:18 PDT
Revision
r66875
cherry-picked into qtwebkit-2.1 with commit a64f996864afde31b00d787522d47d1222a8f756
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug